--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -19,6 +19,7 @@
     "@types/express": "^4.17.16",
     "@types/node": "^18.11.18",
     "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
